...
        >

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#78CD7B"
        android:fontFamily="@font/short_stack"
        android:gravity="center"
        android:text="OK"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideLine"
        app:layout_constraintEnd_toStartOf="@+id/right_guideLine"
        app:layout_constraintStart_toStartOf="@+id/left_guideLine" />
</androidx.constraintlayout.widget.ConstraintLayout>
